# finance-technical-tests

./: .gitignore  README.md
bank-history-microservice/: README.md
event-driven-with-kafka/: README.md
fastapi-backend/: README.md  app.py  requirements.txt
finance22/: Makefile  docker-compose.yml  package-lock.json
finance22/db/: expense_copy.db  transactions_copy.db
finance22/microservices/backend-for-frontend/: Dockerfile  requirements.txt
finance22/microservices/bank/: Dockerfile  Makefile  README.md  public_bank_key.pem  requirements.txt
finance22/microservices/expense/: Dockerfile  alembic.ini  expense.db  requirements.txt
finance22/microservices/expense/src/sdk/: README.md  pyproject.toml  setup.py
finance22/microservices/expense/src/sdk/src/expense_client/: __init__.py  client.py
finance22/microservices/react-frontend/: Dockerfile  package.json
finance22/microservices/synchronisation/: Dockerfile  README.md  pyproject.toml  requirements.txt
finance22/microservices/token/: Dockerfile  Makefile  alembic.ini  pats.db  requirements.txt
finance22/microservices/token/sdk/: pyproject.toml  pyproject.toml.original
finance22/microservices/token/sdk/src/token_client/: client.py
finance22/microservices/token/sdk/tests/e2e/: test_sdk.py
react-frontend/: package-lock.json  package.json
react-frontend/src/: App.js  index.css  index.js  utils.js
transaction-storage-with-sqlite/: README.md  requirements.txt
transaction-storage-with-sqlite/data/: factory_script.py
transaction-storage-with-sqlite/migrations/: env.py
(+686 files in other folders)
