[tool.poetry]
name = "expense_client"
version = "0.0.0"
description = "SDK for Expense microservice."
authors = ["Warren <rabbitsinwarrens@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httplib2 = "^0.19.1"
uritemplate = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
